--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hotcatz",
+  "name": "simple-node-boilerplate",
   "version": "0.0.1",
-  "author": "Hunter Loftis <hunter@skookum.com>",
+  "author": "Hunter Loftis <hunter@hunterloftis.com>",
   "engines": {
     "node": "0.8.x"
   },
@@ -10,11 +10,9 @@
     "connect-timeout": "0.0.1",
     "jade": "0.27.6",
     "stylus": "0.30.1",
-    "async": "0.1.22",
-    "underscore": "1.4.2",
-    "nib": "~0.8.2"
+    "underscore": "~1.4.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app"
   }
 }
